test/Fail/Issue1436-10.err
Issue1436-10.agda:17.7-14: error: [AmbiguousParseForApplication]
Don't know how to parse ! X , X. Could mean any one of:
  ! (H X X)
  ! (F λ X → X)
Operators used in the grammar:
  !  (prefix operator, level 1) [!_ (Issue1436-10.agda:4.3-5)]
  _, (prefix notation, level 2) [F (Issue1436-10.agda:2.3-4)] 
  ,  (infix notation, level 20) [H (Issue1436-10.agda:3.3-4)] 
when scope checking ! X , X
